<resources>
    <string name="app_name">Daerato Shabab Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>


    <!-- Strings related to Member Details -->
    <string name="member_name">Member Name</string>
    <string name="ejamaat_no">Ejamaat Number</string>
    <string name="mob_no">Mobile Number</string>
    <string name="email">Email</string>
    <string name="status">Status</string>

    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Username Invalid (Minimum : 8 Maximum :15)</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_shabab_home">ShababHome</string>
</resources>
